--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -846,11 +846,74 @@ a {
         color: #fff;
       }
         .component.type--services .service .name {
-          
+          text-transform: uppercase;
         }
 @media (min-width: 960px) {
   .component.type--services .services {
     grid-template-columns: repeat(2, calc((100% - (32px * 1)) / 2));
     justify-content: space-between;
+  }
+}
+/* SERVICE */
+.component.type--service {
+  padding: 64px 0;
+}
+  .component.type--service .image {
+    position: relative;
+  }
+    .component.type--service .image img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 50%;
+    }
+  .component.type--service .information {
+  }
+    .component.type--service .information > *:not(:last-child) {
+      margin-bottom: 24px;
+    }
+    .component.type--service .information .name {
+      text-transform: uppercase;
+      font-size: 2rem;
+      color: var(--theme-primary__color--1);
+    }
+    .component.type--service .information .description {
+    }
+      .component.type--service .information .description > *:not(:last-child) {
+        margin-bottom: 12px;
+      }
+@media (min-width: 640px) {
+  .component.type--service::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  .component.type--service .image {
+    width: 33.33%;
+    padding-top: 33.33%;
+  }
+  [dir="ltr"] .component.type--service .image {
+    float: right;
+    margin-left: 24px;
+  }
+  [dir="rtl"] .component.type--service .image {
+    float: left;
+    margin-right: 24px;
+  }
+}
+@media (max-width: 639px) {
+  .component.type--service .image {
+    margin: 0 auto 24px;
+    width: 66.66%;
+    padding-top: 66.66%;
+  }
+  .component.type--service .information {
+    text-align: center;
   }
 }
