--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -917,3 +917,75 @@ a {
     text-align: center;
   }
 }
+/* DOCTOR */
+.component.type--doctor {
+  padding: 64px 0;
+  display: flex;
+  align-items: center;
+}
+  .component.type--doctor .image {
+    position: relative;
+    box-shadow: 0 0 4px 0 var(--theme-primary__color--1);
+    border-radius: 50%;
+    padding: 2px;
+    width: 128px;
+    height: 128px;
+    flex-shrink: 0;
+  }
+    .component.type--doctor .image img {
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      background-color: var(--theme-primary__color--white);
+      object-fit: contain;
+      object-position: 50% 50%;
+    }
+  .component.type--doctor .information {
+    box-shadow: 0 0 4px 0 var(--theme-primary__color--1);
+    box-sizing: border-box;
+    border-radius: 16px;
+    padding: 32px;
+    width: 100%;
+    min-height: 256px;
+    display: grid;
+    grid-gap: 8px;
+  }
+    .component.type--doctor .information .label {
+      text-transform: uppercase;
+      font-weight: bold;
+      color: var(--theme-primary__color--1);
+    }
+    .component.type--doctor .information .name {
+      text-transform: capitalize;
+    }
+@media (min-width: 640px) {
+.component.type--doctor {
+  flex-direction: row-reverse;
+}
+  [dir="ltr"] .component.type--doctor .information {
+    margin-right: -66px;
+    padding-right: 98px;
+  }
+  [dir="rtl"] .component.type--doctor .information {
+    margin-left: -66px;
+    padding-left: 98px;
+  }
+    [dir="ltr"] .component.type--doctor .information > *:not(.label) {
+      margin-left: 16px;
+    }
+    [dir="rtl"] .component.type--doctor .information > *:not(.label) {
+      margin-right: 16px;
+    }
+}
+@media (max-width: 639px) {
+.component.type--doctor {
+  flex-direction: column;
+}
+  .component.type--doctor .information {
+    margin-top: -66px;
+    padding-top: 98px;
+  }
+    .component.type--doctor .information .label {
+      text-align: center;
+    }
+}
