--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -989,3 +989,146 @@ a {
       text-align: center;
     }
 }
+/* REGISTRATION FORM */
+.component.type--registration-form {
+
+}
+  .component.type--registration-form .form {
+    padding: 64px 0;
+  }
+    .component.type--registration-form .form .inputs {
+      display: grid;
+      grid-gap: 32px;
+    }
+      .component.type--registration-form .form .input {
+        display: grid;
+        justify-items: start;
+        grid-gap: 8px;
+      }
+        .component.type--registration-form .form .input label {
+          text-transform: uppercase;
+        }
+        .component.type--registration-form .form .input input {
+          box-sizing: border-box;
+          margin: 0;
+          outline-color: var(--theme-primary__color--2);
+          border: 1px solid var(--theme-primary__color--1);
+          border-radius: 8px;
+          padding: 8px;
+          max-width: 100%;
+          text-transform: capitalize;
+          background-color: var(--theme-primary__color--white);
+          color: var(--theme-primary__color--1);
+        }
+        .component.type--registration-form .form .input input[type="text"], .component.type--registration-form .form .input input[type="password"], .component.type--registration-form .form .input input[type="email"] {
+          width: 100%;
+        }
+        .component.type--registration-form .form .input.error input[type="text"], .component.type--registration-form .form .input.error input[type="password"], .component.type--registration-form .form .input.error input[type="email"] {
+          border-color: var(--theme-primary__messages--danger__color--1);
+        }
+        .component.type--registration-form .form .input input[type="submit"] {
+          cursor: pointer;
+        }
+        .component.type--registration-form .form .input.type--image .image {
+          cursor: pointer;
+          box-shadow: 0 0 4px 0 var(--theme-primary__color--1);
+          margin: 0 auto;
+          border-radius: 50%;
+          width: 128px;
+          height: 128px;
+        }
+        .component.type--registration-form .form .input.type--image.error .image {
+          box-shadow: 0 0 4px 0 var(--theme-primary__messages--danger__color--1);
+        }
+        .component.type--registration-form .form .input.type--image.warning .image {
+          box-shadow: 0 0 4px 0 var(--theme-primary__messages--warning__color--1);
+        }
+          .component.type--registration-form .form .input.type--image .image img {
+            box-sizing: border-box;
+            border-radius: 50%;
+            padding: 2px;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
+          }
+        .component.type--registration-form .form .input.type--image input[type="file"] {
+          display: none;
+        }
+@media (min-width: 640px) {
+    .component.type--registration-form .form .inputs {
+      grid-template-columns: repeat(4, calc((100% - (32px * 3)) / 4));
+    }
+      .component.type--registration-form .form .input {
+        grid-column-end: span 2;
+      }
+      .component.type--registration-form .form .input.style--center {
+        grid-column-start: 2;
+      }
+      .component.type--registration-form .form .input.style--full {
+        grid-column-end: span 4;
+      }
+}
+@media (max-width: 639px) {
+
+}
+/* REGISTRATION FORM MESSAGES */
+.component.type--registration-form-messages {
+}
+  .component.type--registration-form-messages .messages {
+    PADDING: 12PX 0;
+    display: grid;
+    align-items: end;
+  }
+    .component.type--registration-form-messages .message {
+      position: relative;
+      box-sizing: border-box;
+      margin-bottom: 12px;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: 8px;
+      width: 100%;
+      padding: 8px 16px;
+      line-height: 1.8em;
+    }
+    .component.type--registration-form-messages .message {
+      color: var(--theme-primary__messages__color--1);
+      background-color: var(--theme-primary__messages__color--2);
+      border-color: var(--theme-primary__messages__color--3);
+    }
+    .component.type--registration-form-messages .message.success {
+      color: var(--theme-primary__messages--success__color--1);
+      background-color: var(--theme-primary__messages--success__color--2);
+      border-color: var(--theme-primary__messages--success__color--3);
+    }
+    .component.type--registration-form-messages .message.info {
+      color: var(--theme-primary__messages--info__color--1);
+      background-color: var(--theme-primary__messages--info__color--2);
+      border-color: var(--theme-primary__messages--info__color--3);
+    }
+    .component.type--registration-form-messages .message.warning {
+      color: var(--theme-primary__messages--warning__color--1);
+      background-color: var(--theme-primary__messages--warning__color--2);
+      border-color: var(--theme-primary__messages--warning__color--3);
+    }
+    .component.type--registration-form-messages .message.danger {
+      color: var(--theme-primary__messages--danger__color--1);
+      background-color: var(--theme-primary__messages--danger__color--2);
+      border-color: var(--theme-primary__messages--danger__color--3);
+    }
+      .component.type--registration-form-messages .message .close {
+        cursor: pointer;
+        position: absolute;
+        top: 8px;
+        line-height: 1;
+      }
+      [dir="ltr"] .component.type--registration-form-messages .message .close {
+        right: 8px;
+      }
+      [dir="rtl"] .component.type--registration-form-messages .message .close {
+        left: 8px;
+      }
+      .component.type--registration-form-messages .message .title {
+        text-transform: capitalize;
+        font-weight: bold;
+      }
