Add News Component

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1178,3 +1178,118 @@ a {
         text-transform: capitalize;
         font-weight: bold;
       }
+/* SERVICE */
+.component.type--service {
+  padding: 64px 0;
+}
+  .component.type--service .image {
+    position: relative;
+  }
+    .component.type--service .image img {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      border-radius: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 50%;
+    }
+  .component.type--service .information {
+  }
+    .component.type--service .information > *:not(:last-child) {
+      margin-bottom: 24px;
+    }
+    .component.type--service .information .name {
+      text-transform: uppercase;
+      font-size: 2rem;
+      color: var(--theme-primary__color--1);
+    }
+    .component.type--service .information .description {
+    }
+      .component.type--service .information .description > *:not(:last-child) {
+        margin-bottom: 12px;
+      }
+@media (min-width: 640px) {
+  .component.type--service::after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  .component.type--service .image {
+    width: 33.33%;
+    padding-top: 33.33%;
+  }
+  [dir="ltr"] .component.type--service .image {
+    float: right;
+    margin-left: 24px;
+  }
+  [dir="rtl"] .component.type--service .image {
+    float: left;
+    margin-right: 24px;
+  }
+}
+@media (max-width: 639px) {
+  .component.type--service .image {
+    margin: 0 auto 24px;
+    width: 66.66%;
+    padding-top: 66.66%;
+  }
+  .component.type--service .information {
+    text-align: center;
+  }
+}
+/* NEWS */
+.component.type--news {
+
+}
+  .component.type--news .news-items {
+    display: grid;
+    grid-row-gap: 32px;
+    padding: 32px 0;
+  }
+    .component.type--news .news-item {
+      position: relative;
+      padding-top: 177.77%;
+      padding-top: 56.25%;
+      padding-top: 100%;
+    }
+      .component.type--news .news-item .image {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .component.type--news .news-item .image img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: 50% 50%;
+      }
+      .component.type--news .news-item .information {
+        position: absolute;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        padding: 12px;
+        background-color: rgba(0, 0, 0, 0.6);
+        color: #fff;
+      }
+        .component.type--news .news-item .name {
+          text-transform: uppercase;
+        }
+        .component.type--news .news-item .description {
+          height: 3.6em;
+          overflow: hidden;
+          font-size: 0.8rem;
+          line-height: 1.2em;
+        }
+@media (min-width: 960px) {
+  .component.type--news .news-items {
+    grid-template-columns: repeat(3, calc((100% - (32px * 2)) / 3));
+    justify-content: space-between;
+  }
+}
